test/errors/parsing/unsupportedAsIdent1.compopts
--detailed-errors # unsupportedAsIdent1-detailed.good
--no-detailed-errors # unsupportedAsIdent1-brief.good
